# BrutalEngine

./: .gitignore  README.MD.md  README_BUILD.md
brutal/: CMakeLists.txt
brutal/engine/: CMakeLists.txt
brutal/engine/docs/: README.md  debug_input_jump.md  fps_player_controller.md  mouse_look_debugging.md  player_controller_design.md
brutal/engine/private/: engine.cpp
brutal/engine/private/core/: logging.cpp  memory.cpp  platform_win32.cpp  profiler.cpp  time.cpp
brutal/engine/private/math/: geometry.cpp
brutal/engine/private/renderer/: camera.cpp  debug_draw.cpp  gl_context.cpp  light.cpp  mesh.cpp  renderer.cpp  shader.cpp
brutal/engine/private/world/: brush.cpp  collision.cpp  entity.cpp  flashlight.cpp  player.cpp  scene.cpp  scene_io.cpp
brutal/engine/public/brutal/: brutal.h
brutal/engine/public/brutal/core/: logging.h  memory.h  platform.h  profiler.h  time.h  types.h
brutal/engine/public/brutal/math/: geometry.h  mat.h  quat.h  vec.h
brutal/engine/public/brutal/renderer/: camera.h  debug_draw.h  flashlight.h  gl_context.h  light.h  mesh.h  renderer.h  shader.h
brutal/engine/public/brutal/world/: brush.h  collision.h  entity.h  flashlight.h  player.h  scene.h  scene_io.h
brutal/playground/: CMakeLists.txt
brutal/playground/src/: debug_camera.cpp  debug_camera.h  debug_system.cpp  debug_system.h  editor.cpp  editor.h  engine_mode.cpp  engine_mode.h  main.cpp
brutal/playground/src/editor/: Editor.cpp  Editor.h  Editor_camera.cpp  Editor_camera.h  Editor_cursor.cpp  Editor_cursor.h  Editor_dockspace.cpp  Editor_dockspace.h  Editor_gizmo.cpp  Editor_gizmo.h  Editor_input.cpp  Editor_input.h  Editor_viewport.cpp  Editor_viewport.h
brutal/playground/src/editor/Panels/: Panel_console.cpp  Panel_console.h  Panel_content.cpp  Panel_content.h  Panel_hierarchy.cpp  Panel_hierarchy.h  Panel_inspector.cpp  Panel_inspector.h
